Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -16,7 +16,20 @@
     </section>
 
     <section class="main-content">
-      <p>Here should be the jekyll page.</p>
+      <h1>
+<a id="our-current-projects" class="anchor" href="#our-current-projects" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Our current projects:</h1>
+
+<h2>
+<a id="volgenmodel" class="anchor" href="#volgenmodel" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Volgenmodel</h2>
+
+<p><a href="https://github.com/CAIsr/volgenmodel">https://github.com/CAIsr/volgenmodel</a>
+volgenmodel creates nonlinear models from a series of input MINC files - modelling was originally created as part of the ANDI project funded by DCRC</p>
+
+<h2>
+<a id="volgenmodel-nipype" class="anchor" href="#volgenmodel-nipype" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Volgenmodel-nipype</h2>
+
+<p><a href="https://github.com/CAIsr/volgenmodel-nipype">https://github.com/CAIsr/volgenmodel-nipype</a>
+volgenmodel-nipype is the port of volgenmodel to nipype. It creates nonlinear models from a series of input MINC files.</p>
 
       <footer class="site-footer">
 
