Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,32 +1,28 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Caisr.GitHub.io : Describing our tools and imaging workflows">
+    <title>Caisr.GitHub.io by CAIsr</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Caisr.GitHub.io</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Caisr.GitHub.io</h1>
+        <p>Describing our tools and imaging workflows</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/CAIsr">View on GitHub</a>
 
-          <h1 id="project_title">Caisr.GitHub.io</h1>
-          <h2 id="project_tagline">Describing our tools and imaging workflows</h2>
+        <p class="view"><a href="https://github.com/CAIsr">View My GitHub Profile</a></p>
 
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+      </header>
+      <section>
         <h2>
 <a id="volgenmodel" class="anchor" href="#volgenmodel" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Volgenmodel</h2>
 
@@ -41,16 +37,11 @@
 
 <p>volgenmodel-nipype is the port of volgenmodel to nipype. It creates nonlinear models from a series of input MINC files.</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
